--- a/style.css
+++ b/style.css
@@ -2,6 +2,20 @@
 *{
     padding: 0;
     margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+body{
+    background: url('https://t4.ftcdn.net/jpg/03/88/80/99/360_F_388809926_87rKqTigDmzM3qk6DunfrCFKm9GGxRQv.jpg');
+}
+body::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.3); 
+    z-index: -1;
 }
 section{
     height: 100vh;
@@ -10,7 +24,7 @@ section{
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    background-color: #F5F5F5;
+    /* background-color: #F5F5F5; */
 }
 .container{
 
@@ -52,6 +66,13 @@ h1{
     background-color:#b777df;
     border-radius: 10px;
 }
+h3{
+    font-size: 40px;
+    background-color: #f7adff;
+    padding: 5px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+}
 
 button:hover{
     background-color: #b777df;
@@ -74,7 +95,29 @@ p{
 .heading{
     padding: 20px 70px;
     margin-bottom: 40px;
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 48px;
 }
+
+.loading {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.7); 
+    z-index: 999; 
+    overflow: hidden;
+  }
+  
+  .loading img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 200px;
+    width: 200px;
+  }
 
 @media (max-width:600px){
 .container{
